--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
-    "cookie-session": "^1.4.0",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "mongoose": "^5.10.5",
-    "soundcloud": "^3.3.2"
+    "express-session": "^1.17.1",
+    "mongoose": "^5.10.5"
   }
 }
