--- a/package.json
+++ b/package.json
@@ -13,11 +13,7 @@
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
     "mongoose": "^5.10.5",
-    "nodemon": "^2.0.7",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1"
+    "nodemon": "^2.0.7"
   }
 }
