--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongoose": "^5.11.17",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "soundcloud": "^3.3.2"
   }
 }
